--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -18,9 +18,15 @@
             <div class="panel">
               <h4 class="hide-for-small">Question<hr/></h4>
               <div class="code_box">
-                <% @questions.each_slice(1) do |slice| %>
-                  <p><%= slice[0][:question] %></p>
-                  <% form_for @answers %>
+                <% @questions.each do |slice| %>
+                  <div>
+                    <%= slice.question %>
+                  </div>
+                    <%= form_for @answer do |f| %>
+                    <%= f.label :body, "Your answer: " %>
+                    <%= f.text_field :body %>
+                    <%= f.submit "Submit Answer" %>
+                    <% end %>
                 <% end %>
               </div>
             </div>
