--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -26,7 +26,8 @@
                     <%= form_for [@user, @answer] do |f| %>
                     <%= f.label :body, "Your answer: " %>
                     <%= f.text_field :body %>
-                    <%= f.hidden_field :user_id, :value => @user %>
+                    <%= f.hidden_field :user_id, :value => current_user.id, method: :put %>
+                    <%= f.hidden_field :username, :value => current_user.username, method: :put %>
                     <%= f.submit "Submit Answer" %>
                     <% end %>
                 <% end %>
